# exo3d-tools

./: .gitignore  LICENSE  Makefile  README.md  flake.nix  justfile  pyproject.toml
exo3d_tools/: __init__.py  __main__.py  convert.py  data.py  data1.py  data2.py  data2_cartesian.py  data2_polar.py  data3.py  data3_cartesian.py  data3_spherical.py  data_1d.py  data_2d.py  data_3d.py  dataframe1.py  dataframe3.py  dataframe_1.py  grid.py  grid1.py  grid2.py  grid2_cartesian.py  grid2_polar.py  grid3.py  grid3_cartesian.py  grid3_spherical.py  interpolate2.py  interpolate_2.py  plot1.py  plot2.py  plot_1.py  plot_2.py  projection21.py  projection31.py  projection32.py  projection_2_1.py  projection_3_1.py  projection_3_2.py  read1.py  read3.py  read_1d.py  (+18 more)
tests/: conftest.py  test_convert.py  test_dataframe1.py  test_dataframe_1.py  test_interpolate2.py  test_interpolate_2.py  test_plot1.py  test_plot2.py  test_plot_1.py  test_plot_2.py  test_projection21.py  test_projection31.py  test_projection32.py  test_projection_2_1.py  test_projection_3_1.py  test_projection_3_2.py  test_read1.py  test_read3.py  test_read_1d.py  test_read_3d.py  test_save1.py  test_save3.py  test_save_1d.py  test_save_3d.py  test_transform2.py  test_transform3.py  test_transform_2.py  test_transform_3.py
