[tool.poetry]
name = "exo3d_tools"
version = "0.1.1"
description = "exo3d tools (read and save data, projections, interpolation, 1D, 2D plotting) library."
authors = ["Artem Shepelin <4.shepelin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
numpy = "^1.26.0"
pandas = "^2.1.1"
scipy = "^1.11.3"
matplotlib = {version = "^3.8.0", optional = true}

[tool.poetry.extras]
matplotlib = ["matplotlib"]


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
