[project]
name = "exo3d_tools"
version = "0.2.0"
description = """\
exo3d tools (read and save data, projections, interpolation, 1D, 2D plotting) \
library.\
"""
authors = [{name = "Artem Shepelin", email = "4.shepelin@gmail.com"}]
readme = "README.md"
keywords = ["exo3d", "astrophysics", "exoplanets"]
license = {text = "GPL-3"}
requires-python = ">= 3.11"
dependencies = [
    "numpy >= 1.26.0",
    "pandas >= 2.1.1",
    "scipy >= 1.11.3",
    "typer >= 0.9.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib >= 3.8.0",
]
dev = [
    "exo3d_tools[plot]",
    "pytest >= 7.4.2",
    "twine >= 4.0.2",
]

[project.scripts]
e3 = "exo3d_tools.__main__:app"
exo3d_tools = "exo3d_tools.__main__:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"